--- a/style.css
+++ b/style.css
@@ -9,10 +9,58 @@ body {
 }
 
 .font-primary {
-    color: #00abae;
+    color: #9370db;
 }
 
 .title-icon {
     font-size: 20px;
     font-weight: bold;
+}
+
+
+/************
+
+ABOUT
+
+*************/
+
+#about {
+    margin: 60px auto;
+    max-width: 400px;
+    text-align: center;
+}
+
+#about img{
+    border-radius: 50%;
+    width: 120px;
+    margin-bottom: 10px;
+}
+
+#about .name{
+    font-size: 19px;
+}
+
+#about .vocation{
+    font-size: 17px;
+    color: #a8a8ab;
+    margin-bottom: 10px;
+}
+
+#about .skills{
+    font-size: 14px;
+    color: #9370db;
+    margin-bottom: 10px;
+}
+#about .email{
+    margin-top: 14px;
+    font-size: 14px;
+}
+
+#about .icons{
+    margin-top: 20px;
+    font-size: 30px;
+}
+
+#about .icons a{
+    color: #000;
 }
